# GalaxyFight

./: .gitignore  CMakeLists.txt  GameSettings.ini  Main.cpp  README.md  WhoDidWhat.txt  asteroids.files  asteroids.includes  compile_commands.json  global_socket.h  graphicshqitem.cpp  graphicshqitem.h  init_file.h  qt5multimedia_pakete_required.txt  winningscreen.cpp  winningscreen.h  winningscreen.ui
.github/workflows/: ccpp.yml
io/: LevelParser.cpp  LevelParser.hpp  SoundFactory.cpp  SoundFactory.hpp
math/: Randomizer.hpp  Vector.hpp  Vector.tcc
models/: 01.map  02.map  level.xml
physics/: ParticleEngine.cpp  ParticleEngine.hpp  PhysicalObject.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  Transformable.cpp  Transformable.hpp
qtclient/: client.cpp  client.h
qtserver/: client_data.h  flags.h  loggingtype.h  main.cpp  mytcpserver.cpp  mytcpserver.h  packettypes.h  qtserver.pro  serverphysicalobject.cpp  serverphysicalobject.h  serverphysics.cpp  serverphysics.h  serverphysics.h.autosave
rendering/: Asteroid.cpp  Asteroid.hpp  Bullet.cpp  Bullet.hpp  Crosshair.cpp  Crosshair.hpp  HealthBar.cpp  HealthBar.hpp  SpaceCraft.cpp  SpaceCraft.hpp
rendering/2D/: CreateMap.cpp  CreateMap.hpp  Map.cpp  Map.hpp  MapFactory.cpp  MapFactory.hpp  Planet.cpp  Planet.hpp  PlanetChanges.hpp
settings/: GameSettings.ini  init_file.h
util/: AsteroidField.cpp  GameValues.hpp  HwoDidWhat.txt  ManageGame.cpp  ManageGame.hpp  MapFactory.hpp  player.cpp  player.h
view/: Camera.cpp  Camera.hpp  GLWidget.cpp  GLWidget.hpp  HUDWidget.cpp  HUDWidget.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  infobar.cpp  infobar.h  infobar.ui  loadingscreen.cpp  loadingscreen.h  loadingscreen.ui  loadingscreen.ui.autosave  loosingscreen.cpp  loosingscreen.h  loosingscreen.ui  scene2d.cpp  scene2d.h  scene2d.ui  settingwindow.cpp  settingwindow.h  settingwindow.ui  startscreen.cpp  startscreen.h  startscreen.ui  winningscreen.cpp  winningscreen.h  winningscreen.ui
view/2DScene/: graphicplanetitem.h  graphicsItemPlanet.cpp  graphicsItemPlanet.h  graphicsfactoryitem.cpp  graphicsfactoryitem.h  graphicsfighteritem.cpp  graphicsfighteritem.h  graphicshqitem.cpp  graphicshqitem.h  graphicsitemplanet.cpp  graphicsitemplanet.h  graphicsmineitem.cpp  graphicsmineitem.h  graphicsplanetitem.cpp  graphicsplanetitem.h  graphicstransporteritem.cpp  graphicstransporteritem.h  itemtypes.h  scene2dhandler.cpp  scene2dhandler.h
view/items/: Map.hpp  Planet.hpp  PlanetChanges.hpp
